[package]
name = "p2pledger"
version = "0.1.1"
edition = "2021"

[lib]
name = "p2p_ledger"
path = "src"

[dependencies]
tokio = {features = ["full"], version = "1.32.0"}
serde = {features = ["derive", "serde_derive", "default"], version = "1.0.188"}
serde_json = "1.0.40"
sha2 = "0.10.7"
hex = "0.4.3"
